<resources>
    <string name="app_name">Football Apps</string>
    <string name="title_matches">Matches</string>
    <string name="tittle_teams">Teams</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="favorites">Love it</string>
    <string name="match_search_hint">Find match</string>
    <string name="team_search_hint">Find team</string>

    <string-array name="leagues">
        <item>English Premier League</item>
        <item>English League Championship</item>
...
